# incident-management-system

./: .gitignore  COMMANDS.md  PHASES.md  README.md  TESTING.md  compose.grafana.override.yaml  compose.yaml  context.md  final.md  plan.md
backend/: Dockerfile  pyproject.toml
backend/src/alerting/: __init__.py  base.py  email.py  pagerduty.py  router.py  slack.py
backend/src/app/: config.py  dependencies.py  main.py
backend/src/app/routes/: health.py  incidents.py  signals.py
backend/src/incident_pipeline/: config.py  models.py  pipeline.py
backend/src/incident_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/incident_pipeline/cache/: __init__.py  hotcache.py  pool.py
backend/src/incident_pipeline/db/: migrate.sql  migration.py  retry.py  store.py
backend/src/incident_pipeline/debounce/: __init__.py  deduper.py
backend/src/incident_pipeline/rca/: __init__.py  policy.py
backend/src/ingestion/: producer.py  rate_limiter.py
backend/src/observability/: health.py  metrics.py  prometheus.py
backend/src/signals/: __init__.py  consumer.py  models.py  retry.py  store.py
backend/src/workflow/: rca_guard.py  state_machine.py
backend/tests/: test_alerting.py  test_api.py  test_cache.py  test_debounce.py  test_pipeline.py  test_rate_limiter.py  test_rca_policy.py  test_signals.py  test_workflow.py
frontend/: .env  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
monitoring/grafana/: ims-observability-dashboard.json
scripts/: seed_data.py  setup_ec2_ubuntu.sh  simulate_failures.py
(+11 files in other folders)
