[project]
name = "incident-pipeline"
version = "0.1.0"
description = "Incident processing pipeline with RCA enforcement, debouncing, and caching"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "nats-py>=2.9",
    "motor>=3.6",
    "slowapi>=0.1.9",
    "aiosmtplib>=3.0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "fakeredis>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
